# m-desktop

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
scripts/: build.js
src/: App.tsx  app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/sk/: ahelp  ahelp.pub
src-tauri/src/: command.rs  constants.rs  data.rs  lib.rs  main.rs  utils.rs
src-tauri/src/winx/: mod.rs
src-tauri/src/winx/core/: api.rs  mod.rs  model.rs
src-tauri/src/winx/macos/: api.rs  mod.rs
src-tauri/src/winx/win32/: api.rs  mod.rs
src-tauri/templates/: installer.nsi
src-tauri/templates/languages/: SimpChinese.nsh
src/components/: layout.tsx
src/context/: socket.tsx
src/routes/: index.tsx
src/utils/: sdk.ts
src/views/auth/: index.tsx
src/views/home/: index.tsx
