[package]
name = "ahelp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[features]
default = ["dev"]  # 默认开发环境
dev = []
test = []
prod = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ahelp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3.0"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.0" }
objc2-core-foundation = { version = "0.3.0" }
objc2-core-graphics = { version = "0.3.0" }
objc2-foundation = { version = "0.3.0", features = ["NSArray", "NSString", "NSGeometry", "NSProcessInfo"] }
objc2-app-kit = { version =  "0.3.0", features =  ["NSImage", "NSRunningApplication", "NSWorkspace", "NSBitmapImageRep", "NSImageRep", "NSScreen"] }



[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_System_ProcessStatus",
  "Win32_System_StationsAndDesktops",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Dwm",
  "UI_UIAutomation",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_System_Ole",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_Shell_Common",
  "Win32_System_Variant",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Imaging",
  "Win32_UI_Controls",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
